# pos_next

./: INSTALLATION_GUIDE.txt  LICENSE  README.md  README.txt  pyproject.toml  setup.py
docs/: screenshots.md
pos_next/: __init__.py  hooks.py  modules.txt  seed.py
pos_next/api/: __init__.py  boot.py  fix.py  kds.py  pos.py  receipt.py
pos_next/config/: desktop.py  docs.py
pos_next/fixtures/: custom_field.json
pos_next/pos_next/doctype/pos_cash_transaction/: pos_cash_transaction.json  pos_cash_transaction.py
pos_next/pos_next/doctype/pos_floor/: pos_floor.json  pos_floor.py
pos_next/pos_next/doctype/pos_kot/: pos_kot.json  pos_kot.py
pos_next/pos_next/doctype/pos_kot_item/: pos_kot_item.json  pos_kot_item.py
pos_next/pos_next/doctype/pos_kot_printer_map/: pos_kot_printer_map.json  pos_kot_printer_map.py
pos_next/pos_next/doctype/pos_next_settings/: pos_next_settings.json  pos_next_settings.py
pos_next/pos_next/doctype/pos_receipt_template/: pos_receipt_template.json  pos_receipt_template.py
pos_next/pos_next/doctype/pos_table/: pos_table.json  pos_table.py
pos_next/pos_next/report/kot_performance/: kot_performance.json  kot_performance.py
pos_next/pos_next/report/pos_cashier_log/: pos_cashier_log.json  pos_cashier_log.py
pos_next/pos_next/report/pos_hourly_sales/: pos_hourly_sales.json  pos_hourly_sales.py
pos_next/pos_next/report/pos_product_performance/: pos_product_performance.json  pos_product_performance.py
pos_next/pos_next/report/pos_sales_summary/: pos_sales_summary.json  pos_sales_summary.py
pos_next/pos_next/report/pos_table_wise_sales/: pos_table_wise_sales.json  pos_table_wise_sales.py
pos_next/pos_next/report/pos_x_z_report/: pos_x_z_report.json  pos_x_z_report.py
pos_next/public/css/: pos_next.bundle.css
pos_next/public/js/: cash_ops.js  customer_display.js  offline_handler.js  pos_controller.js  pos_invoice.js  pos_next.bundle.js  pos_profile.js  receipt_templates.js  restaurant_mode.js  supermarket_mode.js
pos_next/workspace/pos_next/: pos_next.json
pos_next/www/: customer-display.py  kds.py
pos_next/www/customer-display/: index.html
pos_next/www/kds/: index.html
workspace/pos-next/: pos-next.json
workspace/pos_next/: pos_next.json
